...
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/upvoteTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?attr/textAppearanceCaption"
                android:textColor="@color/primary_text"
                tools:text="1.2k upvotes" />

            <TextView
                android:id="@+id/downvoteTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAppearance="?attr/textAppearanceCaption"
                android:textColor="@color/primary_text"
...
